tests/diagnostics/snapshots/star_is_the_current_address.snap
---
source: src/test/diagnostics.rs
expression: diagnostics
input_file: tests/diagnostics/star_is_the_current_address.asm
---
[
  {
    "severity": "warning",
    "code": "star_is_the_current_address",
    "message": "The `*` after `nop` is the current address, not the start of a comment.",
    "hint": "`nop` takes no operands, so the `*` is ignored; write `;` to start a comment",
    "location": {
      "file": "star_is_the_current_address.asm",
      "line": 1,
      "column": 8,
      "endColumn": 9
    },
    "related": []
  },
  {
    "severity": "suggestion",
    "code": "bare_comment",
    "message": "This is EASy68K's comment field; s68k reads it as a comment.",
    "hint": "Start comments with `;` to say so",
    "location": {
      "file": "star_is_the_current_address.asm",
      "line": 1,
      "column": 10,
      "endColumn": 20
    },
    "related": []
  }
]
