tests/diagnostics/snapshots/unclosed_parenthesis.snap
---
source: src/test/diagnostics.rs
expression: diagnostics
input_file: tests/diagnostics/unclosed_parenthesis.asm
---
[
  {
    "severity": "error",
    "code": "unclosed_parenthesis",
    "message": "This `(` is never closed.",
    "hint": "Add the `)`",
    "location": {
      "file": "unclosed_parenthesis.asm",
      "line": 1,
      "column": 12,
      "endColumn": 13
    },
    "related": []
  }
]
