tests/diagnostics/snapshots/unexpected_character.snap
---
source: src/test/diagnostics.rs
expression: diagnostics
input_file: tests/diagnostics/unexpected_character.asm
---
[
  {
    "severity": "error",
    "code": "unexpected_character",
    "message": "`?` cannot start anything here.",
    "hint": null,
    "location": {
      "file": "unexpected_character.asm",
      "line": 1,
      "column": 11,
      "endColumn": 12
    },
    "related": []
  },
  {
    "severity": "error",
    "code": "unexpected_character",
    "message": "`‘` cannot start anything here.",
    "hint": "Write `'`",
    "location": {
      "file": "unexpected_character.asm",
      "line": 4,
      "column": 12,
      "endColumn": 13
    },
    "related": []
  },
  {
    "severity": "error",
    "code": "unexpected_character",
    "message": "`’` cannot start anything here.",
    "hint": "Write `'`",
    "location": {
      "file": "unexpected_character.asm",
      "line": 4,
      "column": 14,
      "endColumn": 15
    },
    "related": []
  }
]
